Fixed Safari image layout problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,13 @@ div {
   justify-content: center;
 }
 
+img {
+  align-self: flex-start;
+}
+
 #coo {
   width: 60%;
-  max-width: 600px;
-  max-height: 600px;
+  height: auto;
   margin-bottom: 60px;
 }
 
